[gd_scene load_steps=4 format=3 uid="uid://ce8bfmrsk33n"]

[ext_resource type="Script" path="res://Nodes/Enemies/spawner.gd" id="1_p0kk7"]
[ext_resource type="PackedScene" uid="uid://bhxlsbs7rvctp" path="res://Nodes/Enemies/Enemy.tscn" id="2_mdlie"]
[ext_resource type="PackedScene" uid="uid://uxgaqqqjl0px" path="res://Nodes/Enemies/enemy_slime.tscn" id="3_uupms"]

[node name="spawner" type="Marker2D"]
script = ExtResource("1_p0kk7")
mob_scene = Array[PackedScene]([ExtResource("2_mdlie"), ExtResource("3_uupms")])

[node name="evolution_time" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="spawn_time" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="evolution_time" to="." method="_on_evolution_time_timeout"]
[connection signal="timeout" from="spawn_time" to="." method="_on_spawn_time_timeout"]
